fix youtube overflow size

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -226,6 +226,22 @@ ul#plus-home-list{
 	padding-bottom: 40px;
 }
 
+/*Youtube video resizer*/
+
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
 @media (min-width: 768px) {  
   .card-columns {column-count: 2;}
 }
